# dread-hunger-2

./: .gitattributes  .gitignore  AbyssLock.uproject  CLAUDE.md  Cargo.toml  Frostwake.uproject  README.md
.cargo/: config.toml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Source/: AbyssLock.Target.cs  AbyssLockEditor.Target.cs  AbyssLockServer.Target.cs  Frostwake.Target.cs  FrostwakeEditor.Target.cs  FrostwakeServer.Target.cs
Tools/: README.md  asset_ledger_check.py  backlog_to_issues.py  bot_client_runner.md  build_and_upload.md  github_issue_sync.py  log_summary.py  new_cycle.py  playtest_preflight.py  playtest_report_upload.py  playtest_run_scaffold.py  playtest_summary.py  quality_gate.py  reference_inventory.sh  unreal_gate.py
apps/backend/: Cargo.toml  README.md  openapi.yaml  package-lock.json  package.json  tsconfig.json
apps/backend/src/: index.ts  lib.rs  main.rs  server.ts  validation.ts
apps/backend/test/: server.test.mjs
apps/backend/tests/: server.rs
crates/frostwake-tools/: Cargo.toml
crates/frostwake-tools/src/: main.rs
docs/: accessibility-baseline.md  agent-operating-model.md  ai-content-disclosure.md  art-bible.md  asset-acquisition-plan.md  asset-ledger-candidates.csv  asset-ledger.md  asset-scorecard.md  backend-contract.md  best-practice-alignment.md  business-model.md  commercial-quality-target.md  competitive-analysis.md  control-scheme.md  dread-hunger-server-reference.md  free-asset-intake.md  frostwake-modernization-plan.md  game-design.md  gp03-fatal-sabotage-smoke-summary.md  gp08-megascans-field-plan.md  (+59 more)
(+386 files in other folders)
