[package]
name = "frostwake-backend"
description = "Non-authoritative Frostwake operations backend."
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
