[package]
name = "frostwake-tools"
description = "Rust operational tooling for Frostwake validation workflows."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
csv = "1"
regex = "1"
serde_json = "1"
sha2 = "0.10"
